<resources>
    <string name="app_name">优鲜超市</string>
    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="shop_cart">购物车</string>
    <string name="my">我的</string>
    <string name="orders">全部订单</string>
    <string name="unpaid">待付款</string>
    <string name="distribution">待配送</string>
    <string name="receive">待收货</string>
    <string name="refund">轻松退</string>
    <string name="coupon">优惠券</string>
    <string name="receiver_addr">收货地址</string>
    <string name="help">帮助中心</string>
    <string name="service">联系客服</string>
    <string name="settings">设置</string>
    <string name="consignee_">收货人：</string>
    <string name="phone_number_">手机号码：</string>
    <string name="district_">小区 / 大厦：</string>
    <string name="number_">楼号 - 门牌号：</string>
    <string name="remark_">备注信息：</string>
    <string name="location">当前定位</string>
    <string name="my_receiver_addr">我的收货地址</string>
    <string name="reposition">重新定位</string>
    <string name="surrounding">附近地址</string>
    <string name="new_receive_addr">新增收货地址</string>
    <string name="new_addr">新增地址</string>
    <string name="edit_addr">编辑地址</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="check_all">全选</string>
    <string name="set_default">设为默认</string>
    <string name="go_shopping">去逛逛</string>
    <string name="go_duoshou_">去结算(%d)</string>
    <string name="go_duoshou">去结算</string>
    <string name="total_">合计：%s</string>
    <string name="sum_">总额：%s</string>
    <string name="discounts_">优惠：%s</string>
    <string name="subtotal_">小计：</string>
    <string name="specification_">规格：%s</string>
    <string name="payment_">实付款：</string>
    <string name="payment2_">需付款：</string>
    <string name="_count">共%d种</string>
    <string name="goods_order_list">商品清单</string>
    <string name="receive_time">预计收货时间</string>
    <string name="commit_order">提交订单</string>
    <string name="goods_total">商品总额</string>
    <string name="discounts">优惠</string>
    <string name="carriage">运费（满%s元包邮）</string>
    <string name="invoice">发票</string>
    <string name="not_invoice">不开发票</string>
    <string name="goods_detail">商品详情</string>
    <string name="trademark">品牌</string>
    <string name="origin_place">产地</string>
    <string name="produced_date">生产日期</string>
    <string name="shelflife">保质期</string>
    <string name="storage_condition">存储条件</string>
    <string name="login_or_regist">登录/注册</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="verify_order">确认订单</string>
    <string name="option_specification">请选择 规格</string>
    <string name="pay_successful">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="wechat_pay_">微信支付：%s</string>
    <string name="alipay_">支付宝支付：%s</string>
    <string name="pay_fail_tag">支付异常，该订单已为您保留到“待支付”订单中，请尝试重新支付</string>
    <string name="pay_again">重新支付</string>
    <string name="check_order">查看订单</string>
    <string name="return_index">返回首页</string>
    <string name="invoice_type">发票类型</string>
    <string name="common_invoice">普通发票</string>
    <string name="e_invoice">电子发票</string>
    <string name="invoice_receiver">收票人信息</string>
    <string name="invoice_content">发票内容</string>
    <string name="goods_detail2">商品明细</string>
    <string name="invoice_head">发票抬头</string>
    <string name="person">个人</string>
    <string name="company">公司</string>
    <string name="input_invoice_head">请在此填写准确的抬头名称</string>
    <string name="input_invoice_num">请在此填写纳税人识别号</string>
    <string name="available">可用（%d）</string>
    <string name="disabled">不可用（%d）</string>
    <string name="coupon_empty">目前没有可用优惠券</string>
    <string name="user_order">我的订单</string>
    <string name="all">全部</string>
    <string name="all_classify">全部分类</string>
    <string name="distributing">配送中</string>
    <string name="complete">已完成</string>
    <string name="refund2">退货</string>
    <string name="to_be_paid">待支付</string>
    <string name="order_num_">订单号:%s</string>
    <string name="order_num2_">订单编号：</string>
    <string name="order_time_">下单时间：</string>
    <string name="pay_way_">支付方式：</string>
    <string name="invoice_type_">发票类型：</string>
    <string name="order_detail">订单详情</string>
    <string name="time_remaining">剩余时间 %s</string>
    <string name="input_your_phone_num">请输入您的手机号</string>
    <string name="input_check_code">请输入验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="get_check_code_again">重新获取</string>
    <string name="get_check_code_again_">重新获取（%ds）</string>
    <string name="login">登录</string>
    <string name="hot_search">热门搜索</string>
    <string name="slogan1">品质臻选</string>
    <string name="slogan2">优惠折扣</string>
    <string name="slogan3">当日送达</string>
    <string name="recent_news">最新简报</string>
    <string name="recommend">精选推荐</string>
    <string name="recommend_tag">精心挑选的超级好货</string>
    <string name="new_goods">新品上市</string>
    <string name="new_goods_tag">搜索好味道，抢先品尝</string>
    <string name="hot_goods">热销推荐</string>
    <string name="hot_goods_tag">快来看看大家都在买什么</string>
    <string name="invite_gift">邀请有礼</string>
    <string name="gift_tag">新鲜生鲜水果邀请好友共享</string>
    <string name="coupon_tag">兑换、查看优惠券</string>
    <string name="select">请选择</string>
    <string name="number_tag">例如：B座1901室</string>
    <string name="map_search_tag">搜索小区 / 大厦</string>
    <string name="search_no_result_tag">没有查询到结果～</string>
    <string name="not_set_addr_tag">您还没有设置收货地址～</string>
    <string name="empty_shop_cart_tag">购物车空空如也～</string>
    <string name="guess_like">猜你喜欢</string>
    <string name="hint_">温馨提示：</string>
    <string name="hint_pay">温馨提示：请您在规定时间内完成支付</string>
    <string name="_currency_">¥</string>
    <string name="use">立即使用</string>
    <string name="rules">详细规则</string>
    <string name="invite">立即邀请</string>
    <string name="invite_new">邀请新人送30元</string>
    <string name="invite_friend">您已邀请%d位好友</string>
    <string name="invite_gift_activity">邀请有礼活动  已结束</string>
    <string name="invite_new_tag">邀请新用户下单签收，即得30元红包，新用户另得60元新人礼包</string>
    <string name="friend_phone_num">好友手机号</string>
    <string name="get_date">获得时间</string>
    <string name="whether_got_lucky_money_or_not">是否得到红包</string>
    <string name="login_tag">未注册过的手机号码将自动注册为优鲜超市账号</string>
    <string name="login_tag2">登录即代表同意《优鲜超市注册协议》《优鲜超市用户隐私协议》</string>
    <string name="out_of_distribution">不在配送范围之内，请选择收货地址</string>
    <string name="destination_">送至：%s</string>
    <string name="check_code_sent">验证码已发送</string>
    <string name="phone_num_invalid">手机号码无效</string>
    <string name="check_code_invalid">验证码无效</string>
    <string name="login_successful">登录成功</string>
    <string name="location_fail">定位失败</string>
    <string name="save_successful">保存成功</string>
    <string name="delete_successful">删除成功</string>
    <string name="consignee_empty">收货人不能为空</string>
    <string name="invaild_phone_num">无效的手机号</string>
    <string name="delivery_address_empty">收货地址不能为空</string>
    <string name="added_shop_cart">已添加到购物车</string>
    <string name="update_shop_cart">已更新购物车</string>
    <string name="do_not_have_selected_goods">没有选中的商品</string>
    <string name="increase_receiving_information">请增加一个收货信息</string>
    <string name="choice_shop">请选择一家店铺</string>
    <string name="open_notify">开启通知</string>
    <string name="clear_cache">清除缓存</string>
    <string name="update_online">在线更新</string>
    <string name="last_version">已是最新版本</string>
    <string name="new_version">有新版本可更新</string>
    <string name="update_version">版本更新</string>
    <string name="update">更新</string>
    <string name="not_update">暂不更新</string>
    <string name="about_me">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="exchange">兑换</string>
    <string name="exchange_code">请输入优惠券兑换码</string>
    <string name="not_coupon">无优惠券可用</string>
    <string name="enable_coupon">可用优惠券</string>
    <string name="empty_invoice_head">发票抬头不能为空</string>
    <string name="empty_invoice_num">纳税人识别号不能为空</string>
    <string name="person_invoice">个人发票</string>
    <string name="company_invoice">公司发票</string>
    <string name="_full_reduction">满%s元可用</string>
    <string name="addr_cannot_delivery">所选地址不在配送范围内</string>
    <string name="delete">删除</string>
    <string name="pay_count_down_">支付剩余时间 %s</string>
    <string name="pay_count_down_tag">请在规定的时间内完成支付，否则订单将会被自动取消！</string>
    <string name="amount_">实付金额：</string>
    <string name="choice_pay_mode">选择支付方式</string>
    <string name="verify_pay">确认支付%s</string>
    <string name="pay_order">支付订单</string>
    <string name="empty_consignee">收货人信息不能为空</string>
    <string name="chioce_address">选择地址</string>
    <string name="add_shopcart">加入购物车</string>
    <string name="buy_num_">购买数量(%s)</string>
    <string name="buy_num">购买数量</string>
    <string name="select_">已选：%s</string>
    <string name="goods">商品</string>
    <string name="detail">详情</string>
    <string name="recommend2">推荐</string>
    <string name="max_quantity">已达到最大数量</string>
    <string name="chioce_delivery_time">选择送达时间</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="nothing_selected">没有选中项</string>
    <string name="to_pay">去支付</string>
    <string name="wait_refund">待退款</string>
    <string name="refunded">已退款</string>
    <string name="buy_again">再次购买</string>
    <string name="apply_for_returning">申请退货</string>
    <string name="keyword_is_empty">请输入搜索关键字</string>
    <string name="click_open">查看</string>
    <string name="order_pay_outtime">付款超时，请重新购买</string>
    <string name="first_category_1">新鲜水果</string>
    <string name="first_category_2">放心蔬菜</string>
    <string name="first_category_3">鲜肉蛋品</string>
    <string name="first_category_4">水产海鲜</string>
    <string name="first_category_5">粮油副食</string>
    <string name="first_category_6">休闲零食</string>
    <string name="first_category_7">中外名酒</string>
    <string name="first_category_8">美妆个护</string>
    <string name="message">消息</string>
    <string name="remaining_">剩余 %s</string>
    <string name="canceled">已取消</string>
    <string name="canceled_tag">订单已取消(用户取消)</string>
    <string name="canceled_tag2">订单已取消(系统取消)</string>
    <string name="wait_refund_tag">退款流程正在处理中，请耐心等待～</string>
    <string name="refund_tag3">订单已成功退款</string>
    <string name="unpaid_tag">请在订单提交后，尽快支付，超时将取消订单</string>
    <string name="distributing_tag">订单已经确认，配送小哥正在飞奔配送，请注意查收～</string>
    <string name="complete_tag">订单已经完成，欢迎下次惠顾～</string>
    <string name="cancel_order">取消订单</string>
    <string name="pay_now">立即支付</string>
    <string name="refund_tag">已受理退款申请</string>
    <string name="hint">提示</string>
    <string name="refund_tag2">确定要申请退款吗？</string>
    <string name="ok">确定</string>
    <string name="delete_tag">确定要删除吗？</string>
    <string name="coupon_code_invalid">兑换码无效</string>
    <string name="exchange_success">兑换成功</string>
    <string name="num_not_0">购买数量不能小于1</string>
    <string name="remark_tag">这里输入备注信息～</string>
    <string name="adress_invalid">该地址不在配送范围</string>
    <string name="according_location_recommend_shop">根据定位为你推荐以下店铺</string>
    <string name="show_shop_list">定位不在该商铺配送范围内，将切换到商铺列表</string>
    <string name="search_no_result">没有查找到您想要的商品~</string>
    <string name="refund_amount">退款总金额</string>
    <string name="version_v_">版本：V %s</string>
    <string name="agreement">优鲜超市会员服务协议</string>
    <string name="policy">优鲜超市隐私权政策</string>
    <string name="business_information">优鲜超市商家信息</string>
    <string name="inside_entrance">优鲜超市内部专用入口</string>
    <string name="look_pack">详情见包装</string>
    <string name="message_list_empty">您还没有任何消息哦~</string>
    <string name="order_list_empty">您还没有订单信息~</string>
    <string name="empty">这里空空如也哦~</string>
    <string name="again_exit">再按一次退出程序</string>
    <string name="tag_1">全球食材</string>
    <string name="tag_2">优质放心</string>
</resources>