<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:paddingTop="@dimen/margin_large_t"
        android:paddingBottom="@dimen/margin_large_t"
        android:gravity="center"
        android:text="@string/friend_phone_num"
        android:textColor="@color/textBrown"
        android:textSize="@dimen/text_size_large"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingTop="@dimen/margin_large_t"
        android:paddingBottom="@dimen/margin_large_t"
        android:gravity="center"
        android:text="@string/get_date"
        android:textColor="@color/textBrown"
        android:textSize="@dimen/text_size_large"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingTop="@dimen/margin_large_t"
        android:paddingBottom="@dimen/margin_large_t"
        android:gravity="center"
        android:text="@string/whether_got_lucky_money_or_not"
        android:textColor="@color/textBrown"
        android:textSize="@dimen/text_size_large"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</LinearLayout>